--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ overflow: scroll;
 <script>
   const $=(c)=>document.querySelector(c)
   mapFiles={
+    "":["clock","clock2","clock3","clock4","clock5","clock6","chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"],
     cssComponents:["3dphoto",
 "allgradients",
 "alltransform",
@@ -130,8 +131,7 @@ overflow: scroll;
 apiTry:[
   "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photooapi","moviesearch","waifu","keyframe","keyframe copy","randomanime","weatherapi","ytsapi"
 ],
-"":["clock","clock2","clock3","chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"],
-"simple Projects JS":["bigsuricon","ckhra","crmtry","glasseffect","imagetext","jsontohtml","meshfill","morsecode","multipartTOJson","neumorphicbtn","papertext","shadowtext","shadowtext2","spr","stopwatch","TicTacToe"]
+"simple Projects JS":["bigsuricon","ckhra","crmtry","glasseffect","imagetext","jsontohtml","meshfill","morsecode","multipartTOJson","neumorphicbtn","papertext","shadowtext","shadowtext2","spr","stopwatch","TicTacToe"],
 
   }
   Object.keys(mapFiles).forEach(m=>{
