--- a/clock6.html
+++ b/clock6.html
@@ -5,15 +5,15 @@
   <title>CSV to Table</title>
   <style>
       .circle{
-        width: 500px;
-        height: 500px;
+        height: calc(100vh/1.2);
+        width: calc(100vw/2);
         border-radius:50%;
         background:#55b9f3;
         box-shadow: -13px -13px 23px hsl(202,86.8%,40.3%), 13px 13px 23px hsl(202,86.8%,88.3%);
         margin: 10px;
         text-align: center;
         line-height: 500%;
-        font-size: 6rem;
+         font-size: calc(100vh/6);
         font-weight: 700;
         color: #aa460c;
         text-shadow: 2px 2px 3px #723d1e;
