--- a/desktop.html
+++ b/desktop.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css" integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Michroma&family=Saira+Stencil+One&family=Kelly+Slab&family=Atomic+Age&family=Keania+One&family=Tourney&family=Syncopate&family=Geo&family=Goldman&family=Turret+Road:wght@200;300;400;500;700;800&family=Unica+One&family=Genos&display=swap');
     body{
         background: url("./pizza.jpg");
         background-size:cover;
@@ -28,18 +29,91 @@
     }
     a>i:hover{
         border-radius: 50%;
+        transform:scale(1.3)
     }
 
     .bs{
         box-shadow: 2px 5px 7px #1d1d1c;
     }
-    .bg-clear{
+    .bg-clear:hover{
         background-color: transparent;
     }
-    .bg-clear:hover{
-        background-color: gray;
-        opacity: .5;
+    .bg-clear{
+        background-color: #eeeeee33;
     }
+    .br-25{
+        border-radius: 25px;
+    }
+.f-anta {
+  font-family: "Anta", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-tourney {
+  font-family: "Tourney", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-syncopate {
+  font-family: "Syncopate", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-michroma {
+  font-family: "Michroma", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-geo {
+  font-family: "Geo", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-unica-one {
+  font-family: "Unica One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-ss-one {
+  font-family: "Saira Stencil One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-atomic-age {
+  font-family: "Atomic Age", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-keania-one {
+  font-family: "Keania One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-kelly-slab {
+  font-family: "Kelly Slab", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-turet-road {
+  font-family: "Turet Road", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-geo-italic {
+  font-family: "Geo", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+.f-goldman {
+  font-family: "Goldman", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.f-genos {
+  font-family: "Genos", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 </style>
 <body class="  bg-secondary">
     <!-- As a link -->
@@ -73,7 +147,7 @@
         <a class="nav-link" href="#"><i class="fa fa-terminal" aria-hidden="true"></i></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
         </li>
             <li class="nav-item">
         <a class="nav-link" href="#"><i class="fa fa-chrome" aria-hidden="true"></i></a>
@@ -97,13 +171,14 @@
 
 <div class="container d-flex flex-column justify-content-evenly align-items-center">
     <button class="btn btn-info">asd</button>
-    <div class="card bg-clear bs align-self-center" style="width: 25rem;">
+
+    <div class="card bg-clear bs align-self-center br-25 f-ss-one" style="width: 25rem;">
   <!-- <img src="..." class="card-img-top" alt="..."> -->
   <div class="card-body text-center">
-    <h5 class="card-title">Clock</h5>
-    <p class="card-text h1 display-1 fw-bold font-monospace">11:20:33</p>
-    <span class="fw-bold">Tuesday</span>
-    <span class="fw-bold">15<sup>th</sup> April</span>
+    <h5 class="card-title display-5">Samaharjan</h5>
+    <p class="card-text h1 display-1 fw-bold ">11:20:33</p>
+    <span class="fw-bold f-geo">Tuesday</span>
+    <span class="fw-bold f-genos">15<sup>th</sup> April</span>
     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
   </div>
 </div>
