--- a/desktop.html
+++ b/desktop.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css" integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css" integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Michroma&family=Saira+Stencil+One&family=Kelly+Slab&family=Atomic+Age&family=Keania+One&family=Tourney&family=Syncopate&family=Geo&family=Goldman&family=Turret+Road:wght@200;300;400;500;700;800&family=Unica+One&family=Genos&display=swap');
@@ -114,27 +115,43 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.w-25{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 10px;
+    border-radius: 20px;
+}
+
+.search{
+    margin: 20px;
+    width: 50%;
+    border-radius: 50px;
+
+}
 </style>
 <body class="  bg-secondary">
     <!-- As a link -->
 <nav class="navbar-side navbar-dark bg-dark">
-    <div class="container-fluid">
-      
-  <div class="me-auto" id="navbarNav">
-      <ul class="navbar-nav">
+    <div class="container p-2">
+      <ul class="navbar-nav d-flex flex-column justify-content-evenly">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#"><i class="fa fa-globe ml-1"></i></a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#"><i class="fa fa-search ml-1"></i></a>
+        </li>
         <li class="nav-item">
-          <a class="nav-linfontk" href="#"><i class="fa fa-edit"></i></a>
+          <a class="nav-link"aria-current="page" href="#"><i class="fa fa-edit"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"><i class="fa fa-list"></i></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <a class="nav-link" aria-current="page"  href="#"><i class="fa fa-facebook"></i></a>
         </li>
-                <li class="nav-item">
+        <li class="nav-item">
         <a class="nav-link" href="#"><i class="fa fa-desktop" aria-hidden="true"></i></a>
         </li>
         <li class="nav-item">
@@ -147,7 +164,7 @@
         <a class="nav-link" href="#"><i class="fa fa-terminal" aria-hidden="true"></i></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
         </li>
             <li class="nav-item">
         <a class="nav-link" href="#"><i class="fa fa-chrome" aria-hidden="true"></i></a>
@@ -166,11 +183,9 @@
         </li>
       </ul>
     </div>
-    </div>
 </nav>
 
 <div class="container d-flex flex-column justify-content-evenly align-items-center">
-    <button class="btn btn-info">asd</button>
 
     <div class="card bg-clear bs align-self-center br-25 f-ss-one" style="width: 25rem;">
   <!-- <img src="..." class="card-img-top" alt="..."> -->
@@ -182,6 +197,36 @@
     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
   </div>
 </div>
-</div>    
+
+<div id="carouselExampleControls" class="carousel slide w-25 bs" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./Screenshot (2).png" class="d-block w-100" alt="./Screenshot (2).png">
+    </div>
+    <div class="carousel-item">
+      <img src="./Screenshot (3).png" class="d-block w-100" alt="./Screenshot (2).png">
+    </div>
+    <div class="carousel-item">
+      <img src="./Screenshot (2).png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+  <form class="container-fluid search">
+    <div class="input-group">
+      <span class="input-group-text bg-secondary text-light" id="basic-addon1"><i class="fa fa-search"></i></span>
+      <input type="text" class="form-control bg-dark text-light" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+  </form>
+</div>  
+  
 </body>
 </html>
