--- a/desktop.html
+++ b/desktop.html
@@ -8,9 +8,9 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css" integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="./fonts.css">
 </head>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Anta&family=Michroma&family=Saira+Stencil+One&family=Kelly+Slab&family=Atomic+Age&family=Keania+One&family=Tourney&family=Syncopate&family=Geo&family=Goldman&family=Turret+Road:wght@200;300;400;500;700;800&family=Unica+One&family=Genos&display=swap');
     body{
         background: url("./pizza.jpg");
         background-size:cover;
@@ -45,77 +45,6 @@
     .br-25{
         border-radius: 25px;
     }
-.f-anta {
-  font-family: "Anta", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-tourney {
-  font-family: "Tourney", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-syncopate {
-  font-family: "Syncopate", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-michroma {
-  font-family: "Michroma", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-geo {
-  font-family: "Geo", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-unica-one {
-  font-family: "Unica One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-ss-one {
-  font-family: "Saira Stencil One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-atomic-age {
-  font-family: "Atomic Age", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-keania-one {
-  font-family: "Keania One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-kelly-slab {
-  font-family: "Kelly Slab", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-turet-road {
-  font-family: "Turet Road", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-geo-italic {
-  font-family: "Geo", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-.f-goldman {
-  font-family: "Goldman", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.f-genos {
-  font-family: "Genos", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
 .w-25{
     position: absolute;
     bottom: 0;
