--- a/desktop.html
+++ b/desktop.html
@@ -130,10 +130,10 @@
 <div id="carouselExampleControls" class="carousel slide w-25 bs" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./Screenshot (2).png" class="d-block w-100" alt="./Screenshot (2).png">
+      <img src="./pizza.jpg" class="d-block w-100" alt="./Screenshot (2).png">
     </div>
     <div class="carousel-item">
-      <img src="./Screenshot (3).png" class="d-block w-100" alt="./Screenshot (2).png">
+      <img src="./pasta.jpg" class="d-block w-100" alt="./Screenshot (2).png">
     </div>
     <div class="carousel-item">
       <img src="./Screenshot (2).png" class="d-block w-100" alt="...">
