--- a/icon.html
+++ b/icon.html
@@ -82,5 +82,64 @@
 <i class="fa fa-house"></i>
 <i class="fa fa-eject"></i>
 <i class="fa fa-paper-plane"></i>
+<hr>
+<i class="bi bi-globe"></i>
+<i class="bi bi-search"></i> 
+<i class="bi bi-edit"></i>
+<i class="bi bi-list"></i>
+<i class="bi bi-facebook"></i>
+<i class="bi bi-desktop"></i>
+<i class="bi bi-cog"></i>
+<i class="bi bi-code"></i>
+<i class="bi bi-terminal"></i>
+<i class="bi bi-youtube-play"></i>
+<i class="bi bi-chrome"></i>
+<i class="bi bi-edge"></i>
+<i class="bi bi-music"></i>
+<i class="bi bi-video"></i>
+<i class="bi bi-camera"></i>
+<i class="bi bi-trash"></i>
+<i class="bi bi-expand"></i>
+<i class="bi bi-volume"></i>
+<i class="bi bi-link"></i>
+<i class="bi bi-linkedin"></i>
+<i class="bi bi-instagram"></i>
+<i class="bi bi-snapchat"></i>
+<i class="bi bi-upload"></i>
+<i class="bi bi-download"></i>
+<i class="bi bi-info"></i>
+<i class="bi bi-warning"></i>
+<i class="bi bi-danger"></i>
+<i class="bi bi-user"></i>
+<i class="bi bi-users"></i>
+<i class="bi bi-mail"></i>
+<i class="bi bi-picture"></i>
+<i class="bi bi-drum"></i>
+<i class="bi bi-drive"></i>
+<i class="bi bi-phone"></i>
+<i class="bi bi-file"></i>
+<i class="bi bi-folder-open"></i>
+<i class="bi bi-folder"></i>
+<i class="bi bi-calendar"></i>
+<i class="bi bi-copy"></i>
+<i class="bi bi-wallet"></i>
+<i class="bi bi-video"></i>
+<i class="bi bi-lock"></i>
+<i class="bi bi-unlock"></i>
+<i class="bi bi-undo"></i>
+<i class="bi bi-tv"></i>
+<i class="bi bi-clock"></i>
+<i class="bi bi-stopwatch"></i>
+<i class="bi bi-sort"></i>
+<i class="bi bi-filter"></i>
+<i class="bi bi-signal"></i>
+<i class="bi bi-share"></i>
+<i class="bi bi-rss"></i>
+<i class="bi bi-power-off"></i>
+<i class="bi bi-play"></i>
+<i class="bi bi-palette"></i>
+<i class="bi bi-house"></i>
+<i class="bi bi-eject"></i>
+<i class="bi bi-paper-plane"></i>
 </body>
 </html>
