--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ overflow: scroll;
 <script>
   const $=(c)=>document.querySelector(c)
   mapFiles={
-    "":["clock","accordian","border-gradient","icon","colorDisplay","desktop","clock2","clock3","clock4","clock5","clock6","chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"],
+    "":["clock","accordian","border-gradient","icon","colorDisplay","desktop","clock2","clock3","clock4","clock5","clock6","chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn","waifu","waifu2","waifu3"],
     cssComponents:["3dphoto",
 "allgradients",
 "alltransform",
