--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <style>
   iframe,body {
     background: #eaeaea;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
